v1.1.0: add InMemory-implementation